[gd_scene load_steps=9 format=3 uid="uid://da1vsfwmbk8vw"]

[ext_resource type="Script" uid="uid://dginc6hghigy3" path="res://UI/range_ui.gd" id="1_kur1t"]
[ext_resource type="PackedScene" uid="uid://bxqjwaed60ykh" path="res://UI/data_panel.tscn" id="1_q72xt"]
[ext_resource type="PackedScene" uid="uid://cr5js3cuw3b7y" path="res://UI/Settings/RangeSettings/range_settings.tscn" id="3_bxj45"]
[ext_resource type="PackedScene" uid="uid://xwb2lctkdfv5" path="res://UI/ClubSelector/club_selector.tscn" id="3_crlyb"]
[ext_resource type="Texture2D" uid="uid://d02uis8ujb4ml" path="res://Utils/Settings/Gear.png" id="3_omvf4"]
[ext_resource type="PackedScene" uid="uid://bixsmx2mhvyyx" path="res://UI/SessionPopUp/session_pop_up.tscn" id="4_7kh1v"]
[ext_resource type="Script" uid="uid://3iepiwkqvgs7" path="res://UI/grid_canvas.gd" id="5_rfb4h"]
[ext_resource type="Script" uid="uid://cgdpaxem0op8k" path="res://UI/shot_injector.gd" id="6_j5yvw"]

[node name="RangeUI" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15
script = ExtResource("1_kur1t")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 11

[node name="PlayerName" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 32
text = "Player1"
vertical_alignment = 1

[node name="RecButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
tooltip_text = "Start Recording Range Session"
text = "REC: Off"

[node name="Control" type="Control" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SettingsButton" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("3_omvf4")

[node name="OverlayLayer" type="CanvasLayer" parent="."]

[node name="TotalDistanceOverlay" type="Label" parent="OverlayLayer"]
visible = false
anchors_preset = -1
anchor_top = 0.2
anchor_right = 1.0
anchor_bottom = 0.2
offset_bottom = 40.0
grow_horizontal = 2
size_flags_horizontal = 3
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.6)
theme_override_font_sizes/font_size = 32
text = "Total Distance --"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SettingsLayer" type="CanvasLayer" parent="."]
visible = false

[node name="Background" type="ColorRect" parent="SettingsLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.6)

[node name="Container" type="HBoxContainer" parent="SettingsLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
alignment = 2

[node name="RangeSettings" parent="SettingsLayer/Container" instance=ExtResource("3_bxj45")]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="SessionPopUp" parent="." instance=ExtResource("4_7kh1v")]
layout_mode = 2

[node name="GridCanvas" type="Control" parent="."]
layout_mode = 2
mouse_filter = 2
script = ExtResource("5_rfb4h")

[node name="Distance" parent="GridCanvas" instance=ExtResource("1_q72xt")]
layout_mode = 0
offset_top = 182.0
offset_right = 120.0
offset_bottom = 275.0
label = "Distance"
units = "yd"

[node name="Carry" parent="GridCanvas" instance=ExtResource("1_q72xt")]
layout_mode = 0
offset_top = 230.0
offset_right = 120.0
offset_bottom = 323.0
label = "Carry"
units = "yd"

[node name="Side" parent="GridCanvas" instance=ExtResource("1_q72xt")]
layout_mode = 0
offset_top = 279.0
offset_right = 120.0
offset_bottom = 372.0
label = "Side"
units = "yd"

[node name="Apex" parent="GridCanvas" instance=ExtResource("1_q72xt")]
layout_mode = 0
offset_top = 327.0
offset_right = 120.0
offset_bottom = 420.0
label = "Apex"
units = "ft"

[node name="VLA" parent="GridCanvas" instance=ExtResource("1_q72xt")]
layout_mode = 0
offset_top = 376.0
offset_right = 120.0
offset_bottom = 469.0
label = "VLA"
units = "deg"

[node name="HLA" parent="GridCanvas" instance=ExtResource("1_q72xt")]
layout_mode = 0
offset_top = 424.0
offset_right = 120.0
offset_bottom = 517.0
label = "HLA"
units = "deg"

[node name="Speed" parent="GridCanvas" instance=ExtResource("1_q72xt")]
layout_mode = 0
offset_top = 472.0
offset_right = 120.0
offset_bottom = 565.0
label = "Speed"
units = "mph"

[node name="BackSpin" parent="GridCanvas" instance=ExtResource("1_q72xt")]
layout_mode = 0
offset_top = 520.0
offset_right = 120.0
offset_bottom = 613.0
label = "BackSpin"
units = "rpm"

[node name="SideSpin" parent="GridCanvas" instance=ExtResource("1_q72xt")]
layout_mode = 0
offset_top = 568.0
offset_right = 120.0
offset_bottom = 661.0
label = "SideSpin"
units = "rpm"

[node name="TotalSpin" parent="GridCanvas" instance=ExtResource("1_q72xt")]
layout_mode = 0
offset_top = 616.0
offset_right = 120.0
offset_bottom = 709.0
label = "TotalSpin"
units = "rpm"

[node name="SpinAxis" parent="GridCanvas" instance=ExtResource("1_q72xt")]
layout_mode = 0
offset_top = 664.0
offset_right = 120.0
offset_bottom = 757.0
label = "SpinAxis"
units = "deg"

[node name="ClubSelector" parent="GridCanvas" instance=ExtResource("3_crlyb")]
layout_mode = 0
offset_top = 70.0
offset_right = 120.0
offset_bottom = 150.0
rotation = -0.0004276121

[node name="ShotInjector" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
script = ExtResource("6_j5yvw")

[node name="PayloadLabel" type="Label" parent="ShotInjector"]
layout_mode = 2
text = "Test Payload"

[node name="PayloadOption" type="OptionButton" parent="ShotInjector"]
visible = false
layout_mode = 2

[node name="Speed" type="Label" parent="ShotInjector"]
layout_mode = 2
text = "Speed"

[node name="SpeedSpinBox" type="SpinBox" parent="ShotInjector"]
layout_mode = 2
max_value = 250.0
value = 150.0

[node name="SpinAxis" type="Label" parent="ShotInjector"]
layout_mode = 2
text = "SpinAxis"

[node name="SpinAxisSpinBox" type="SpinBox" parent="ShotInjector"]
layout_mode = 2
min_value = -25.0
max_value = 25.0

[node name="TotalSpin" type="Label" parent="ShotInjector"]
layout_mode = 2
text = "Total Spin"

[node name="TotalSpinSpinBox" type="SpinBox" parent="ShotInjector"]
layout_mode = 2
max_value = 12000.0
value = 6000.0

[node name="HLA" type="Label" parent="ShotInjector"]
layout_mode = 2
text = "HLA"

[node name="HLASpinBox" type="SpinBox" parent="ShotInjector"]
layout_mode = 2
min_value = -45.0
max_value = 45.0

[node name="VLA" type="Label" parent="ShotInjector"]
layout_mode = 2
text = "VLA"

[node name="VLASpinBox" type="SpinBox" parent="ShotInjector"]
layout_mode = 2
max_value = 90.0
value = 12.0

[node name="Button" type="Button" parent="ShotInjector"]
layout_mode = 2
text = "Hit Shot"

[connection signal="pressed" from="HBoxContainer/RecButton" to="." method="_on_rec_button_pressed"]
[connection signal="pressed" from="HBoxContainer/SettingsButton" to="SettingsLayer/Container/RangeSettings" method="_on_settings_button_pressed"]
[connection signal="gui_input" from="SettingsLayer/Background" to="SettingsLayer/Container/RangeSettings" method="_on_background_clicked"]
[connection signal="close_settings_requested" from="SettingsLayer/Container/RangeSettings" to="." method="_on_close_settings_requested"]
[connection signal="toggle_settings_requested" from="SettingsLayer/Container/RangeSettings" to="." method="_on_toggle_settings_requested"]
[connection signal="dir_selected" from="SessionPopUp" to="." method="_on_session_pop_up_dir_selected"]
[connection signal="drag_ended" from="GridCanvas/Distance" to="GridCanvas" method="_on_panel_drag_ended"]
[connection signal="drag_started" from="GridCanvas/Distance" to="GridCanvas" method="_on_panel_drag_started"]
[connection signal="drag_ended" from="GridCanvas/Carry" to="GridCanvas" method="_on_panel_drag_ended"]
[connection signal="drag_started" from="GridCanvas/Carry" to="GridCanvas" method="_on_panel_drag_started"]
[connection signal="drag_ended" from="GridCanvas/Side" to="GridCanvas" method="_on_panel_drag_ended"]
[connection signal="drag_started" from="GridCanvas/Side" to="GridCanvas" method="_on_panel_drag_started"]
[connection signal="drag_ended" from="GridCanvas/Apex" to="GridCanvas" method="_on_panel_drag_ended"]
[connection signal="drag_started" from="GridCanvas/Apex" to="GridCanvas" method="_on_panel_drag_started"]
[connection signal="drag_ended" from="GridCanvas/VLA" to="GridCanvas" method="_on_panel_drag_ended"]
[connection signal="drag_started" from="GridCanvas/VLA" to="GridCanvas" method="_on_panel_drag_started"]
[connection signal="drag_ended" from="GridCanvas/HLA" to="GridCanvas" method="_on_panel_drag_ended"]
[connection signal="drag_started" from="GridCanvas/HLA" to="GridCanvas" method="_on_panel_drag_started"]
[connection signal="drag_ended" from="GridCanvas/Speed" to="GridCanvas" method="_on_panel_drag_ended"]
[connection signal="drag_started" from="GridCanvas/Speed" to="GridCanvas" method="_on_panel_drag_started"]
[connection signal="drag_ended" from="GridCanvas/BackSpin" to="GridCanvas" method="_on_panel_drag_ended"]
[connection signal="drag_started" from="GridCanvas/BackSpin" to="GridCanvas" method="_on_panel_drag_started"]
[connection signal="drag_ended" from="GridCanvas/SideSpin" to="GridCanvas" method="_on_panel_drag_ended"]
[connection signal="drag_started" from="GridCanvas/SideSpin" to="GridCanvas" method="_on_panel_drag_started"]
[connection signal="drag_ended" from="GridCanvas/TotalSpin" to="GridCanvas" method="_on_panel_drag_ended"]
[connection signal="drag_started" from="GridCanvas/TotalSpin" to="GridCanvas" method="_on_panel_drag_started"]
[connection signal="drag_ended" from="GridCanvas/SpinAxis" to="GridCanvas" method="_on_panel_drag_ended"]
[connection signal="drag_started" from="GridCanvas/SpinAxis" to="GridCanvas" method="_on_panel_drag_started"]
[connection signal="inject" from="ShotInjector" to="." method="_on_shot_injector_inject"]
[connection signal="item_selected" from="ShotInjector/PayloadOption" to="ShotInjector" method="_on_payload_option_item_selected"]
[connection signal="pressed" from="ShotInjector/Button" to="ShotInjector" method="_on_button_pressed"]
